Speedometer shows virtual keyboard on Android
Categories
(GeckoView :: IME, defect)
Tracking
(firefox84 fixed)
Tracking | Status | |
---|---|---|
firefox84 | --- | fixed |
People
(Reporter: agi, Assigned: m_kato)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
This is a regression.. bisecting.
Reporter | ||
Comment 1•4 years ago
|
||
10:01.32 INFO: Last good revision: ec225bf5041b71830fb5fdc025232b99f6cd9809
10:01.32 INFO: First bad revision: 7b96efde9ee17f2c79245b7a6047fd686d7f4621
10:01.32 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=ec225bf5041b71830fb5fdc025232b99f6cd9809&tochange=7b96efde9ee17f2c79245b7a6047fd686d7f4621
m_kato: any idea of what's going wrong here?
Updated•4 years ago
|
Reporter | ||
Comment 2•4 years ago
|
||
To reproduce visit https://browserbench.org/Speedometer2.0/ and run the test, it shouldn't open the virtual keyboard but it does with the change in Comment 1.
Assignee | ||
Comment 3•4 years ago
|
||
Hmm, jQuery-TodoMVC causes this issue.
Assignee | ||
Comment 4•4 years ago
|
||
why is form change user input event? ... https://hg.mozilla.org/mozilla-central/rev/febbc0b025c5ab6d1d96516698fe4374e6d7f63e
Assignee | ||
Comment 5•4 years ago
|
||
Assignee | ||
Comment 6•4 years ago
|
||
Software keyboard is shown by user interaction. But change
event by
element.click()
becomes user interaction event by bug 1543439 even if
it is called by script.
Since change
event can be fired by click() method, we shouldn't be
that it is always user interaction.
Comment 7•4 years ago
|
||
The change event should be treated as user interaction event if it is triggered
by user clicks date picker.
This is a follow-up of bug 1543439.
Comment 10•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/cefc4d4481c5
https://hg.mozilla.org/mozilla-central/rev/84780a4376d6
Comment 11•2 years ago
|
||
Moving some keyboard bugs to the new GeckoView::IME component.
Description
•